# argbot

./: .gitignore  README.md
catkin_ws/src/bb_pointnet/: CMakeLists.txt  package.xml
catkin_ws/src/classify/: CMakeLists.txt  package.xml
catkin_ws/src/control/: CMakeLists.txt  README.md  package.xml
catkin_ws/src/demo/: CMakeLists.txt  package.xml
catkin_ws/src/depth_camera/: CMakeLists.txt  README.md  package.xml
catkin_ws/src/hector_slam/: README.md
catkin_ws/src/jupyter/: A*.ipynb  DNN feature extractor.ipynb  LSTM tutorial.ipynb  LSTM.ipynb  LSTM_back.ipynb  Move map.ipynb  duckiepond data visualization.ipynb  edit image.ipynb  environment_training.ipynb  opencv_concat.ipynb  rename dataset.ipynb  traindata.pt
catkin_ws/src/lane_following/: CMakeLists.txt  package.xml
catkin_ws/src/lane_following/cfg/: lookahead.cfg
catkin_ws/src/lane_following/launch/: lane_following.launch  rgbd_lane_following.launch
catkin_ws/src/lane_following/src/: lidar_detection.cpp  path_planning.py  rgbd_detection.cpp  subt_lane_following.py  subt_pid.py
catkin_ws/src/lidar_perception/: CMakeLists.txt  package.xml
catkin_ws/src/lidar_perception/src/: add_point.cpp  auto_labeling.cpp  cluster.cpp  cluster_no_preprocess.cpp  cluster_with_odom.cpp  dock_normal.cpp  manual_label.cpp  map_path_planning.py  mapping_tf.py  object_map.py  path_planning.py  pcl2occupancy.py  pcl_cluster.cpp  pcl_preprocessing.cpp  pcl_preprocessing_rviz.cpp  pcl_to_img.cpp  subt_lane_following.py  test_pcd.cpp  wall_detection.cpp  watch_tower.cpp
catkin_ws/src/mapping/: CMakeLists.txt  package.xml
catkin_ws/src/network/: CMakeLists.txt  package.xml
(+147 files in other folders)
